--- a/app/src/main/res/layout/video_view.xml
+++ b/app/src/main/res/layout/video_view.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:animateLayoutChanges="true"
@@ -15,39 +16,32 @@
         app:cardCornerRadius="10dp">
 
         <LinearLayout
-            android:id="@+id/folderBtn"
+            android:id="@+id/videoBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="10dp">
 
             <ImageView
                 android:id="@+id/videoThumbnail"
-                android:layout_width="90dp"
+                android:layout_width="100dp"
                 android:layout_height="70dp"
                 android:src="@drawable/ic_baseline_folder_24"
+                android:layout_margin="5dp"
                 />
 
             <TextView
                 android:id="@+id/VideoTitle"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-7dp"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:freezesText="true"
+                android:layout_width="220dp"
+                android:layout_height="70dp"
                 android:text="Hey"
-                android:textAlignment="center"
-                android:textColor="#3700B3"
-                android:textSize="12dp" />
+                android:textColor="?attr/colorOnPrimary"
+                android:padding="5dp"
+                android:textSize="15dp" />
 
         </LinearLayout>
 
